<resources>
    <string name="app_name">Weather Application</string>
    <string name="weather">weather</string>
    <string name="temperature">Temperature is %s°C</string>
    <string name="latitude_template">Latitude: %f</string>
    <string name="longitude_template">Longitude: %f</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="button_insert">insert</string>
    <string name="object_name_text">Insert object name: </string>
    <string name="city_example">London</string>
    <string name="object_name_error">Incorrect object name!</string>
    <string name="object_coordinates_error">Incorrect coordinates!</string>
    <string name="geocode_variant">Geocode variant</string>
    <string name="object_name">Object name</string>
    <string name="history">history</string>
    <string name="your_history">Your history:</string>
    <string name="delete_button">delete button</string>
    <string name="view_button">view button</string>
    <string name="switch_storage">database/text file</string>
</resources>