<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/applicationTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/objectNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_name_text"
        app:layout_constraintEnd_toEndOf="@id/applicationTitleTextView"
        app:layout_constraintStart_toStartOf="@id/applicationTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/applicationTitleTextView" />

    <EditText
        android:id="@+id/objectNameEditText"
        style="@style/CustomEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:hint="@string/city_example"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@id/objectNameTextView"
        app:layout_constraintStart_toStartOf="@id/objectNameTextView"
        app:layout_constraintTop_toBottomOf="@id/objectNameTextView"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/insertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/button_insert"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="@id/objectNameEditText"
        app:layout_constraintStart_toStartOf="@id/objectNameEditText"
        app:layout_constraintTop_toBottomOf="@id/objectNameEditText"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:text="@string/latitude"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertButton"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/longitudeTextView"
        android:text="@string/longitude"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitudeTextView"
        android:layout_height="wrap_content"/>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitudeTextView"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>