<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.MenuFragment">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/weather"
        android:textColor="@color/button_text_color"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/history"
        android:textColor="@color/button_text_color"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />
</LinearLayout>