<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MenuActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/weather"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameTextView"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/history"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="@id/weatherButton"
        app:layout_constraintStart_toStartOf="@id/weatherButton"
        app:layout_constraintTop_toBottomOf="@id/weatherButton"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>